# axel

./: .gitignore  Makefile  README.md  align_branches_with_master.sh  axel.S  axel.code-workspace  build-iso.sh  build.sh  clean.sh  env-build.sh  god.sh  mem2.dump  mkiso.sh  qemu.sh  rebuild.sh  test.S
common/common/: utils.c
common/include/: utils.h
common/include/common/: utils.h
debug/: CMakeLists.txt
debug/debug/: main.c
kernel/: Makefile  axel.S
kernel/arch/debug/: asm.c  context_switch.c  copy_page_physical.c  cpuid.c  cpuid_supported.c  enable_paging.c  flush_tlb.c  gdt.c  idt.c  io.c  load_page_directory.c  read_eip.c  rsdp.c  syscall_interface.c  tty.c  vga.c
kernel/arch/i686/: asm.c  asm_cpuid_supported.S  asm_io_wait.S  boot.S  context_switch.S  copy_page_physical.S  cpuid.c  cpuid_supported.S  enable_paging.S  enter_user_mode.S  flush_tlb.S  gdt.c  idt.c  int_entry_points.S  io.c  irq_entry_points.S  linker.ld  ll_int_dispatcher.S  ll_irq_dispatcher.S  load_page_directory.S  mem.c  panic.S  read_eip.S  read_instruction_pointer.S  rsdp.c  store_gdt.S  store_idt.S  syscall_interface.S  tty.c  vga.c
kernel/common/: ordered_array.c  utils.c
kernel/common/include/common/: ordered_array.h  utils.h
kernel/controllers/: acpi.c  cmos.c  com.c  ide.c  mmu.c  pic.c  ps2.c  vesa.c
kernel/controllers/include/controllers/: acpi.h  cmos.h  com.h  ide.h  mmu.h  pic.h  ps2.h  vesa.h
kernel/drivers/: keyboard.c  pic.c  pit.c  ps2.c  rsdp.c
kernel/drivers/include/drivers/: keyboard.h  pic.h  pit.h  ps2.h  rsdp.h
kernel/filesystem/: initrd.c  initrd.img  virtual_fs.c
kernel/filesystem/include/filesystem/: initrd.h  virtual_fs.h
kernel/include/kernel/: asm.h  cpuid.h  elf_loader.h  idt.h  kheap.h  mem.h  memory.h  memory_manager.h  multitasking.h  paging.h  scheduler.h  tty.h  vga.h
kernel/include/kernel/arch/: asm.h  cpuid.h  gdt.h  idt.h  io.h  multiboot.h  rf.h  rsdp.h  tty.h  vga.h
kernel/interrupts/: isr.c
kernel/interrupts/include/interrupts/: isr.h
kernel/interrupts/include/isr/: isr.h
kernel/kernel/: elf_loader.c  kernel.c  kheap.c  memory.c  memory_manager.c  multitasking.c  paging.c  scheduler.c
kernel/syscall/: read.c  sys_fork.c  sys_read.c  sys_spawn.c  sys_write.c  syscall.c  write.c
kernel/syscall/include/syscall/: syscall.h
libc/: Makefile
libc/arch/i686/: syscall_interface.S
libc/errno/: errno.c
libc/include/: errno.h  stdio.h  stdlib.h  unistd.h
libc/include/sys/: cdefs.h
libc/stdio/: printf.c  putchar.c  puts.c
libc/stdlib/: abort.c  atoi.c
libc/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
libc/unistd/: fork.c  read.c  spawn.c  write.c
make-initrd/: make-initrd.c
sw-base/bash/: Makefile  bash.c  bash.h  bash.out  main.c
tools/: make-initrd.c
